--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -8,7 +8,8 @@
     "test": "jest --ci --reporters=default --reporters=jest-junit",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --ci --reporters=default --reporters=jest-junit",
-    "build": "echo 'No build step required for this demo'"
+    "build": "echo 'No build step required for this demo'",
+    "lint": "eslint src/ tests/"
   },
   "keywords": [
     "harness",
@@ -19,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0"
   },
